2013-04-08  Pedro Vicente  <pvicente@uci.edu>

	* gpe_chk() Check valid GPE new name
  
2013-04-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.1 release procedure:
 	Changes since nco-4_3_0: ncbo -G --unn commute
	cd ~/nco;cvs tag -d nco-4_3_1;cvs tag -d nco-4_3_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.1 release"
	cvs tag -c nco-4_3_1;cvs tag -c nco-4_3_1-1

	* Add in_grp_[12].nc

2013-04-06  Pedro Vicente  <pvicente@uci.edu>

	* trv_tbl_prc() Match different types for processed objects

	* Add ncbo test #20; Match different types for processed objects

2013-04-03  Pedro Vicente  <pvicente@uci.edu>

	* trv_tbl_prc() Process common objects

	* trv_tbl_fix() Copy processing type fixed object

	* Add ncbo test #19; Copy associated coordinates as non processed

2013-03-29  Charlie Zender  <zender@uci.edu>

	* ncbo: now almost commutative w/r/t variable rank fixes TODO nco552

2013-03-28  Charlie Zender  <zender@uci.edu>

	* Clarify DAP server errors

	* ncbo: document GPE and --union

	* ncbo: Implement GPE

	* ncbo: Implement --union/--intersection switch

	* Fix ncbo bug: unswap CNV_CCM_CCSM_CF and FIX_REC_CRD arguments to trv_tbl_mch()
	http://nco.sf.net#bug_ncbo_ccm_ccsm_cf

	* NCO 4.3.0 release procedure:
 	Changes since nco-4_2_6: ncbo -g, ncatted NULs, ncap2 rounding
	cd ~/nco;cvs tag -d nco-4_3_0;cvs tag -d nco-4_3_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.0 release"
	cvs tag -c nco-4_3_0;cvs tag -c nco-4_3_0-1

	* Document one-hundred thousand file ncecat example

2013-03-28  Pedro Vicente  <pvicente@uci.edu>

	* Add ncbo test #15,16,17,18; Group addition, subtraction, multiplication, division, with limits

2013-03-27  Charlie Zender  <zender@uci.edu>

	* nco.texi: clarify why -O --no_tmp_fl in.nc in.nc _does not work_

	* Replace ?lround?() with ?lrint?() in internal NCO rounding
	Halfway cases that were rounded away from zero will now round to nearest even integer

	* Add lrint(), lrintf(), llrint(), llrintf() definitions
